--- a/package.json
+++ b/package.json
@@ -23,8 +23,8 @@
   "devDependencies": {
     "husky": "^7.0.0",
     "jest": "^27.5.1",
-    "jest-extended": "^2.0.0",
     "jest-sorted": "^1.0.14",
+    "jest-extended": "^2.0.0",
     "pg-format": "^1.0.4"
   },
   "dependencies": {
@@ -35,6 +35,7 @@
   },
   "jest": {
     "setupFilesAfterEnv": [
+      "jest-sorted", 
       "jest-extended/all"
     ]
   }
