--- a/.github/workflows/test-and-deploy.yml
+++ b/.github/workflows/test-and-deploy.yml
@@ -35,7 +35,7 @@ jobs:
         - name: Clone and checkout repo
           uses: actions/checkout@v3
         - name: Deploy to Heroku
-          uses: akileshns/heroku-deploy@v3.12.12
+          uses: akhileshns/heroku-deploy@v3.12.12
           with: 
             heroku_api_key: ${{secrets.HEROKU_API_KEY}}
             heroku_app_name: ${{secrets.APP_NAME}}
