--- a/package.json
+++ b/package.json
@@ -27,11 +27,12 @@
   "devDependencies": {
     "husky": "^7.0.0",
     "jest": "^27.5.1",
-    "jest-sorted": "^1.0.14",
     "jest-extended": "^2.0.0",
+    "jest-sorted": "^1.0.14",
     "pg-format": "^1.0.4"
   },
   "dependencies": {
+    "cors": "^2.8.5",
     "dotenv": "^16.0.0",
     "express": "^4.18.2",
     "pg": "^8.7.3",
@@ -39,7 +40,7 @@
   },
   "jest": {
     "setupFilesAfterEnv": [
-      "jest-sorted", 
+      "jest-sorted",
       "jest-extended/all"
     ]
   }
